--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "chief-rico-waitinglist",
 	"version": "0.0.1",
 	"scripts": {
+        "start": "vite dev",
 		"dev": "vite dev",
 		"build": "vite build",
 		"preview": "vite preview",
