--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@tailwindcss/forms": "^0.5.4"
+		"@tailwindcss/forms": "^0.5.4",
+		"validatorjs": "^3.22.1"
 	}
 }
